--- a/FirstCSSTasks/StylisedTable.html
+++ b/FirstCSSTasks/StylisedTable.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Styling Tables</title>
-<link rel="stylesheet" href="3CSSTask.css">
+<link rel="stylesheet" href="StylisedTable.css">
 </head>
 <body>
   <table>
