--- a/FirstCSSTasks/StylisedText.html
+++ b/FirstCSSTasks/StylisedText.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-	<title>Fonts Speciment</title>
-	<link rel="stylesheet" href="5CSSTask.css">
+	<title>Stylised Text</title>
+	<link rel="stylesheet" href="StylisedText.css">
 </head>
 
 <body>
