Update and rename SimpleGalleryPage.html to SimplePhotoGalleryPage.html

--- a/BoxModelTasks/SimplePhotoGalleryPage.html
+++ b/BoxModelTasks/SimplePhotoGalleryPage.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>Photo Gallery Page</title>
-	<link rel="stylesheet" href="SimpleGalleryPage.css">
+	<link rel="stylesheet" href="SimplePhotoGalleryPage.css">
 </head>
 
 <body>
