Update and rename SimplePhotoGalleryPage.html to SimplePhotoGallery.html

--- a/BoxModelTasks/SimplePhotoGallery.html
+++ b/BoxModelTasks/SimplePhotoGallery.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>Photo Gallery Page</title>
-	<link rel="stylesheet" href="SimplePhotoGalleryPage.css">
+	<link rel="stylesheet" href="SimplePhotoGallery.css">
 </head>
 
 <body>
