--- a/BoxModelTasks/SimpleAsideMenu.html
+++ b/BoxModelTasks/SimpleAsideMenu.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-	<title>Blog Layout Inline Block</title>
-	<link rel="stylesheet" href="BoxModel6Task.css">
+	<title>Simple Aside Menu</title>
+	<link rel="stylesheet" href="SimpleAsideMenu.css">
 </head>
 
 <body>
