--- a/Position&FloatTasks/StylisedSocialMediaIcons.html
+++ b/Position&FloatTasks/StylisedSocialMediaIcons.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-	<title>Blog Layout - Float</title>
-	<link rel="stylesheet" href="FloatTask6.css">
+	<title>Social Media Icons</title>
+	<link rel="stylesheet" href="StylisedSocialMediaIcons.css">
 </head>
 
 <body>
